--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -6,7 +6,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Hack</family>
+      <family>Source Code Pro</family>
       <family>Noto Sans CJK JP</family>
       <family>Noto Sans CJK KR</family>
       <family>Noto Sans CJK SC</family>
