--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -1,12 +1,16 @@
-# Google DNS
-server=8.8.8.8
-server=8.8.4.4
-
 # Listen for localhost
 listen-address=127.0.0.1
 
 # Listen for localhost and bridged firejail clients
 # listen-address=127.0.0.1,192.168.69.1
+
+# AdGuard DNS
+server=176.103.130.130
+server=176.103.130.131
+
+# Google DNS
+# server=8.8.8.8
+# server=8.8.4.4
 
 # Do not read /etc/resolv.conf, just get servers from this config
 no-resolv
@@ -19,6 +23,7 @@ no-poll
 # these requests from bringing up the link unnecessarily.
 # Never forward plain names (without a dot or domain part)
 domain-needed
+
 # Never forward addresses in the non-routed address spaces.
 bogus-priv
 
