--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -4,9 +4,13 @@ listen-address=127.0.0.1
 # Listen for localhost and bridged firejail clients
 # listen-address=127.0.0.1,192.168.69.1
 
+# DNS.WATCH DNS
+server=84.200.69.80
+server=84.200.70.40
+
 # AdGuard DNS
-server=176.103.130.130
-server=176.103.130.131
+# server=176.103.130.130
+# server=176.103.130.131
 
 # Google DNS
 # server=8.8.8.8
