Turn off tearfree

--- a/etc/X11/xorg.conf.d/20-amdgpu.conf
+++ b/etc/X11/xorg.conf.d/20-amdgpu.conf
@@ -7,6 +7,7 @@ Section "Device"
     Option "DRI" "3"
 
     # Better VSync
-    Option "TearFree" "true"
+    # Causes triple buffering which can in many instances cut output FPS
+    Option "TearFree" "false"
 EndSection
 
