Move to cloudflare

--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -4,6 +4,10 @@ listen-address=127.0.0.1
 # Listen for localhost and bridged firejail clients
 # listen-address=127.0.0.1,192.168.69.1
 
+# Cloudflare DNS
+server=1.1.1.1
+server=1.0.0.1
+
 # DNS.WATCH DNS
 # server=84.200.69.80
 # server=84.200.70.40
@@ -13,8 +17,8 @@ listen-address=127.0.0.1
 # server=176.103.130.131
 
 # Google DNS
-server=8.8.8.8
-server=8.8.4.4
+# server=8.8.8.8
+# server=8.8.4.4
 
 # Do not read /etc/resolv.conf, just get servers from this config
 no-resolv
