--- a/etc/sysctl.d/90-kernel.conf
+++ b/etc/sysctl.d/90-kernel.conf
@@ -11,11 +11,14 @@ kernel.dmesg_restrict = 1
 kernel.nmi_watchdog = 0
 
 # Yama hardening
-kernel.yama.ptrace_scope = 1
+kernel.yama.ptrace_scope = 2
 
 # Work around for a BPF root exploit
 kernel.unprivileged_bpf_disabled = 1
 
 # Memory protection
 kernel.randomize_va_space = 2
+
+# Disable kexec
+kernel.kexec_load_disabled = 1
 
