--- a/etc/sysctl.d/90-network.conf
+++ b/etc/sysctl.d/90-network.conf
@@ -44,45 +44,5 @@ net.ipv4.conf.all.send_redirects = 0
 net.ipv4.conf.default.accept_redirects = 0
 net.ipv4.conf.all.accept_redirects = 0
 
-# Increate ring buffer queue size
-net.core.netdev_max_backlog = 65536
-
-# Increate anicllary buffer size
-net.core.optmem_max = 65536
-
-# Enable TCP window scaling
-net.ipv4.tcp_window_scaling = 1
-
-# Increase network interface memory
-net.core.rmem_default = 1048576
-net.core.wmem_default = 1048576
-net.core.rmem_max = 16777216
-net.core.wmem_max = 16777216
-net.ipv4.tcp_rmem = 4096 87380 16777216
-net.ipv4.tcp_wmem = 4096 65536 16777216
-net.ipv4.udp_rmem_min = 16384
-net.ipv4.udp_wmem_min = 16384
-
-# Faster pending connection handling
-net.ipv4.tcp_max_syn_backlog = 65536
-net.ipv4.tcp_max_tw_buckets = 65536
-
-# Turn off slow start, kills persistent connection performance
-net.ipv4.tcp_slow_start_after_idle = 0
-
-# Re-use tcp time-wait sockets
-net.ipv4.tcp_tw_reuse = 1
-
-# Fast fail useless FIN connections
-net.ipv4.tcp_fin_timeout = 15
-
-# Lower keepalive timeout (2 minutes instead of 2 hours)
-net.ipv4.tcp_keepalive_time = 60
-net.ipv4.tcp_keepalive_intvl = 10
-net.ipv4.tcp_keepalive_probes = 6
-
-# Enable MTU probing
-net.ipv4.tcp_mtu_probing = 1
-
-# Do not accept source routes
-net.ipv4.conf.default.accept_source_route = 0
+# Harden BPF JIT
+net.core.bpf_jit_harden = 2
