Support FreeSync where possible

--- a/etc/X11/xorg.conf.d/20-amdgpu.conf
+++ b/etc/X11/xorg.conf.d/20-amdgpu.conf
@@ -9,5 +9,9 @@ Section "Device"
     # Better VSync
     # Causes triple buffering which can in many instances cut output FPS
     Option "TearFree" "false"
+
+    # FreeSync
+    Option "VariableRefresh" "true"
+
 EndSection
 
