Add ip_forward flag

--- a/etc/sysctl.d/90-network.conf
+++ b/etc/sysctl.d/90-network.conf
@@ -46,3 +46,6 @@ net.ipv4.conf.all.accept_redirects = 0
 
 # Harden BPF JIT
 net.core.bpf_jit_harden = 2
+
+# IP Forwarding
+net.ipv4.ip_forward = 0
