--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -5,7 +5,7 @@
  <alias>
   <family>monospace</family>
   <prefer>
-   <family>Fira Mono</family>
+   <family>Hack</family>
    <family>Noto Sans CJK JP</family>
    <family>Noto Sans CJK KR</family>
    <family>Noto Sans CJK SC</family>
