--- a/etc/sysctl.d/90-network.conf
+++ b/etc/sysctl.d/90-network.conf
@@ -44,6 +44,10 @@ net.ipv4.conf.all.send_redirects = 0
 net.ipv4.conf.default.accept_redirects = 0
 net.ipv4.conf.all.accept_redirects = 0
 
+# Don't accept source routing
+net.ipv4.conf.default.accept_source_route = 0
+net.ipv4.conf.all.accept_source_route = 0
+
 # Harden BPF JIT
 net.core.bpf_jit_harden = 2
 
