--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -1,8 +1,8 @@
 # Listen for localhost
-# listen-address=127.0.0.1
+listen-address=127.0.0.1
 
 # Listen for localhost and bridged firejail clients
-listen-address=127.0.0.1,192.168.69.1
+# listen-address=127.0.0.1,192.168.69.1
 
 # Cloudflare DNS
 # server=1.1.1.1
@@ -19,6 +19,9 @@ server=176.103.130.131
 # Google DNS
 # server=8.8.8.8
 # server=8.8.4.4
+
+# Cache size
+cache-size=1000
 
 # Do not read /etc/resolv.conf, just get servers from this config
 no-resolv
