Adguard servers are really slow

--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -5,18 +5,23 @@ listen-address=127.0.0.1
 # listen-address=127.0.0.1,192.168.69.1
 
 # Cloudflare DNS
-# server=1.1.1.1
-# server=1.0.0.1
-
-# DNS.WATCH DNS
-# server=84.200.69.80
-# server=84.200.70.40
+# latency is around 25 ms
+# does not log traffic
+#
+server=1.1.1.1
+server=1.0.0.1
 
 # AdGuard DNS
-server=176.103.130.130
-server=176.103.130.131
+# latency is around 90 ms
+# does not log traffic
+#
+# server=176.103.130.130
+# server=176.103.130.131
 
 # Google DNS
+# latency is around 15 ms
+# logs traffic
+#
 # server=8.8.8.8
 # server=8.8.4.4
 
