--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -12,13 +12,13 @@
 # See resolved.conf(5) for details
 
 [Resolve]
-DNS=1.1.1.1 1.0.0.1
+DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com
 Domains=~.
 Cache=no-negative
 DNSStubListener=udp
 ReadEtcHosts=yes
 FallbackDNS=8.8.8.8 8.8.4.4
+DNSOverTLS=yes
 #LLMNR=yes
 #MulticastDNS=yes
 #DNSSEC=allow-downgrade
-#DNSOverTLS=no
