Enable for fallback DNS as well

--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -17,7 +17,7 @@ Domains=~.
 Cache=no-negative
 DNSStubListener=udp
 ReadEtcHosts=yes
-FallbackDNS=8.8.8.8 8.8.4.4
+FallbackDNS=8.8.8.8#dns.google 8.8.4.4#dns.google
 DNSOverTLS=yes
 #LLMNR=yes
 #MulticastDNS=yes
