--- a/boot/loader/entries/example.conf
+++ b/boot/loader/entries/example.conf
@@ -26,3 +26,6 @@ options vsyscall=none
 # If you see PCIe Bus Error: severity=Corrected, type=Data Link Layer, id=000b(Receiver ID)
 options pci=nommconf
 # options tsc=unstable
+
+# AMDGPU feature unlocking (may be unstable)
+options amdgpu.ppfeaturemask=0xffffffff
