Other dns settings

--- a/etc/NetworkManager/conf.d/dns.conf
+++ b/etc/NetworkManager/conf.d/dns.conf
@@ -1,4 +1,6 @@
-# Don't touch DNS, let /etc/resolv.conf handle it (which points to local dnsmasq)
+# Don't touch DNS, let /etc/resolv.conf handle it (which points to local systemd-resolved caching DNS)
 [main]
 dns=none
+rc-manager=symlink
+systemd-resolved=false
 
