Cloudflare is just faster, block ads at the hosts level with update-hosts

--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -12,12 +12,12 @@
 # See resolved.conf(5) for details
 
 [Resolve]
-DNS=176.103.130.130#dns.adguard.com 176.103.130.131#dns.adguard.com
+DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com
 Domains=~.
 Cache=no-negative
 DNSStubListener=udp
 ReadEtcHosts=yes
-FallbackDNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com 8.8.8.8#dns.google 8.8.4.4#dns.google
+FallbackDNS=8.8.8.8#dns.google 8.8.4.4#dns.google
 DNSOverTLS=yes
 #LLMNR=yes
 #MulticastDNS=yes
