Add mullvad dns

--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -12,7 +12,10 @@
 # See resolved.conf(5) for details
 
 [Resolve]
+# Normal Cloudflare DNS
 DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com
+# Mullvad VPN
+# DNS=193.138.218.74
 Domains=~.
 Cache=no-negative
 DNSStubListener=udp
