Two configs for DNS

--- a/etc/systemd/resolved.conf
+++ b/etc/systemd/resolved.conf
@@ -12,16 +12,20 @@
 # See resolved.conf(5) for details
 
 [Resolve]
-# Normal Cloudflare DNS
-DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com
-# Mullvad VPN
-# DNS=193.138.218.74
+# Normal Cloudflare DNS, fallback to Google
+# DNS=1.1.1.1#cloudflare-dns.com 1.0.0.1#cloudflare-dns.com
+# FallbackDNS=8.8.8.8#dns.google 8.8.4.4#dns.google
+# DNSOverTLS=yes
+
+# Mullvad VPN DNS, no fallback
+DNS=193.138.218.74
+FallbackDNS=
+DNSOverTLS=no
+
 Domains=~.
 Cache=no-negative
 DNSStubListener=udp
 ReadEtcHosts=yes
-FallbackDNS=8.8.8.8#dns.google 8.8.4.4#dns.google
-DNSOverTLS=yes
 #LLMNR=yes
 #MulticastDNS=yes
 #DNSSEC=allow-downgrade
