Enforce module signatures

--- a/boot/loader/entries/example.conf
+++ b/boot/loader/entries/example.conf
@@ -29,3 +29,6 @@ options pci=nommconf
 
 # AMDGPU feature unlocking (may be unstable)
 options amdgpu.ppfeaturemask=0xffffffff
+
+# Kernel Module Signature validation
+options module.sig_enforce=1
