Add rules for libvirt bridge

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -1,10 +1,36 @@
-# Translated by iptables-restore-translate v1.8.5 on Sun Oct  4 09:47:55 2020
+add table ip mangle
+add chain ip mangle PREROUTING { type filter hook prerouting priority -150; policy accept; }
+add chain ip mangle INPUT { type filter hook input priority -150; policy accept; }
+add chain ip mangle FORWARD { type filter hook forward priority -150; policy accept; }
+add chain ip mangle OUTPUT { type route hook output priority -150; policy accept; }
+add chain ip mangle POSTROUTING { type filter hook postrouting priority -150; policy accept; }
+add chain ip mangle LIBVIRT_PRT
+add rule ip mangle POSTROUTING counter jump LIBVIRT_PRT
+
+add table ip nat
+add chain ip nat PREROUTING { type nat hook prerouting priority -100; policy accept; }
+add chain ip nat INPUT { type nat hook input priority 100; policy accept; }
+add chain ip nat OUTPUT { type nat hook output priority -100; policy accept; }
+add chain ip nat POSTROUTING { type nat hook postrouting priority 100; policy accept; }
+add chain ip nat LIBVIRT_PRT
+add rule ip nat POSTROUTING counter jump LIBVIRT_PRT
+add rule ip nat LIBVIRT_PRT ip saddr 192.168.122.0/24 ip daddr 224.0.0.0/24 counter return
+add rule ip nat LIBVIRT_PRT ip saddr 192.168.122.0/24 ip daddr 255.255.255.255 counter return
+add rule ip nat LIBVIRT_PRT ip protocol tcp ip saddr 192.168.122.0/24 ip daddr != 192.168.122.0/24 counter masquerade to :1024-65535
+add rule ip nat LIBVIRT_PRT ip protocol udp ip saddr 192.168.122.0/24 ip daddr != 192.168.122.0/24 counter masquerade to :1024-65535
+add rule ip nat LIBVIRT_PRT ip saddr 192.168.122.0/24 ip daddr != 192.168.122.0/24 counter masquerade
+
 add table ip filter
 add chain ip filter INPUT { type filter hook input priority 0; policy drop; }
 add chain ip filter FORWARD { type filter hook forward priority 0; policy drop; }
 add chain ip filter OUTPUT { type filter hook output priority 0; policy accept; }
 add chain ip filter ICMP
 add chain ip filter INVALID
+add chain ip filter LIBVIRT_FWI
+add chain ip filter LIBVIRT_FWO
+add chain ip filter LIBVIRT_FWX
+add chain ip filter LIBVIRT_INP
+add chain ip filter LIBVIRT_OUT
 add chain ip filter TCP
 add chain ip filter TCP_DOLPHIN_NETPLAY
 add chain ip filter TCP_KDECONNECT
@@ -22,13 +48,31 @@ add rule ip filter INPUT counter jump INVALID
 add rule ip filter INPUT counter jump ICMP
 add rule ip filter INPUT ip protocol udp ct state new counter jump UDP
 add rule ip filter INPUT tcp flags & (fin|syn|rst|ack) == syn ct state new counter jump TCP
+add rule ip filter INPUT counter jump LIBVIRT_INP
 add rule ip filter INPUT counter log prefix "FINAL: "
 add rule ip filter INPUT counter reject with icmp type prot-unreachable
+add rule ip filter FORWARD counter jump LIBVIRT_FWX
+add rule ip filter FORWARD counter jump LIBVIRT_FWI
+add rule ip filter FORWARD counter jump LIBVIRT_FWO
+add rule ip filter OUTPUT counter jump LIBVIRT_OUT
 add rule ip filter ICMP icmp type echo-request ct state new counter accept
 add rule ip filter ICMP ip protocol icmp counter log prefix "ICMP: "
 add rule ip filter ICMP ip protocol icmp counter reject with icmp type prot-unreachable
 add rule ip filter INVALID ct state invalid counter log prefix "INVALID: "
 add rule ip filter INVALID ct state invalid counter drop
+add rule ip filter LIBVIRT_FWI oifname "virbr0" ip daddr 192.168.122.0/24 ct state related,established counter accept
+add rule ip filter LIBVIRT_FWI oifname "virbr0" counter reject
+add rule ip filter LIBVIRT_FWO iifname "virbr0" ip saddr 192.168.122.0/24 counter accept
+add rule ip filter LIBVIRT_FWO iifname "virbr0" counter reject
+add rule ip filter LIBVIRT_FWX iifname "virbr0" oifname "virbr0" counter accept
+add rule ip filter LIBVIRT_INP iifname "virbr0" udp dport 53 counter accept
+add rule ip filter LIBVIRT_INP iifname "virbr0" tcp dport 53 counter accept
+add rule ip filter LIBVIRT_INP iifname "virbr0" udp dport 67 counter accept
+add rule ip filter LIBVIRT_INP iifname "virbr0" tcp dport 67 counter accept
+add rule ip filter LIBVIRT_OUT oifname "virbr0" udp dport 53 counter accept
+add rule ip filter LIBVIRT_OUT oifname "virbr0" tcp dport 53 counter accept
+add rule ip filter LIBVIRT_OUT oifname "virbr0" udp dport 68 counter accept
+add rule ip filter LIBVIRT_OUT oifname "virbr0" tcp dport 68 counter accept
 add rule ip filter TCP counter jump TCP_DOLPHIN_NETPLAY
 add rule ip filter TCP counter jump TCP_KDECONNECT
 add rule ip filter TCP counter jump TCP_PS4_REMOTE_PLAY
