--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -50,14 +50,14 @@ add rule ip filter INPUT ip protocol udp ct state new counter jump UDP
 add rule ip filter INPUT tcp flags & (fin|syn|rst|ack) == syn ct state new counter jump TCP
 add rule ip filter INPUT counter jump LIBVIRT_INP
 add rule ip filter INPUT counter log prefix "FINAL: "
-add rule ip filter INPUT counter reject with icmp type prot-unreachable
+add rule ip filter INPUT counter reject
 add rule ip filter FORWARD counter jump LIBVIRT_FWX
 add rule ip filter FORWARD counter jump LIBVIRT_FWI
 add rule ip filter FORWARD counter jump LIBVIRT_FWO
 add rule ip filter OUTPUT counter jump LIBVIRT_OUT
 add rule ip filter ICMP icmp type echo-request ct state new counter accept
 add rule ip filter ICMP ip protocol icmp counter log prefix "ICMP: "
-add rule ip filter ICMP ip protocol icmp counter reject with icmp type prot-unreachable
+add rule ip filter ICMP ip protocol icmp counter reject
 add rule ip filter INVALID ct state invalid counter log prefix "INVALID: "
 add rule ip filter INVALID ct state invalid counter drop
 add rule ip filter LIBVIRT_FWI oifname "virbr0" ip daddr 192.168.122.0/24 ct state related,established counter accept
