Add notes about signature enforcing

--- a/boot/loader/entries/example.conf
+++ b/boot/loader/entries/example.conf
@@ -31,4 +31,5 @@ options pci=nommconf
 options amdgpu.ppfeaturemask=0xffffffff
 
 # Kernel Module Signature validation
+# DO NOT USE if you use DKMS modules
 options module.sig_enforce=1
