--- a/boot/loader/entries/example.conf
+++ b/boot/loader/entries/example.conf
@@ -31,5 +31,6 @@ options pci=nommconf
 options amdgpu.ppfeaturemask=0xffffffff
 
 # Kernel Module Signature validation
-# Self-Sign your DKMS modules
-options module.sig_enforce=1
+# DO NOT USE when using DKMS
+# Or Self-Sign and add your key to the kernel trust chain
+# options module.sig_enforce=1
